[gd_scene load_steps=24 format=3 uid="uid://cpjggrg8y0u5h"]

[ext_resource type="Shader" uid="uid://dgdvl665cyybt" path="res://assets/shaders/rounded_texture_rect.gdshader" id="1_n5din"]
[ext_resource type="Texture2D" uid="uid://3gw1ab0qxyl" path="res://assets/art/backgrounds/dystopian_alley_bg.png" id="1_wehm1"]
[ext_resource type="PackedScene" uid="uid://b7ws2nwcq7l2a" path="res://scenes/TapperArea.tscn" id="1_y563b"]
[ext_resource type="Texture2D" uid="uid://bj1rvkrmjry62" path="res://assets/art/vfx/neon_light_circle.png" id="2_lig7u"]
[ext_resource type="Script" uid="uid://dnwo3dxae0sa" path="res://scripts/core/TapperCenter.gd" id="2_tappercenter_script"]
[ext_resource type="Texture2D" uid="uid://cjnlhym25khpe" path="res://assets/art/vfx/neon_light_circle2.png" id="4_2r7vr"]
[ext_resource type="Shader" uid="uid://cx8te4a8bj3c3" path="res://assets/shaders/edge_light_sprite.gdshader" id="6_nujcl"]
[ext_resource type="Script" uid="uid://cqf2w5ulfatrq" path="res://scripts/entities/RatSpawner.gd" id="7_2r7vr"]
[ext_resource type="Texture2D" uid="uid://di1e6qp1thh6b" path="res://assets/art/vfx/bitcoin_sign_3d.png" id="7_nujcl"]
[ext_resource type="PackedScene" uid="uid://cuyvtm2dmn6mk" path="res://scenes/entities/Rat.tscn" id="8_4x851"]
[ext_resource type="Script" uid="uid://bk8ycf8fr0wua" path="res://scripts/visuals/ShaderPulseEffect.gd" id="8_vgntt"]
[ext_resource type="Shader" uid="uid://hnjynjdvt14p" path="res://assets/shaders/retro_tunnel_effect.gdshader" id="9_eunnu"]
[ext_resource type="PackedScene" uid="uid://c6x0j6qwv0p7x" path="res://scenes/entities/Roach.tscn" id="13_fy5hl"]
[ext_resource type="Script" uid="uid://base6l0ti6vfm" path="res://scripts/entities/RoachSpawner.gd" id="14_pifg3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t045l"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4x851"]
shader = ExtResource("1_n5din")
shader_parameter/corner_radius = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n5din"]
shader = ExtResource("1_n5din")
shader_parameter/corner_radius = 24.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eunnu"]
shader = ExtResource("6_nujcl")
shader_parameter/light_color = Color(1, 0, 0.6, 0.662745)
shader_parameter/light_pos_uv = Vector2(0.1, 0.3)
shader_parameter/light_radius = 0.904
shader_parameter/light_intensity = 0.15
shader_parameter/edge_smoothness = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_76cg7"]
shader = ExtResource("9_eunnu")
shader_parameter/iResolution = Vector2(1200, 380)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2r7vr"]
shader = ExtResource("1_n5din")
shader_parameter/corner_radius = 36.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_eunnu"]
vertices = PackedVector2Array(596.508, 353, 597.391, 371.633, 574.031, 366.867, 621.461, 318.602, 654.438, 353, 694, 186, 694, 419.789, 670.5, 415.094, 653.109, 383.617, 602.352, 186, 617.461, 306.922, 596.359, 189, 525.539, 294.438, 569.359, 189, 467.961, 350, 394.547, 350, 399.992, 248.383, 426.383, 168.992, 568.383, 162.453, 401.781, 169.711)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(0, 2, 3), PackedInt32Array(4, 0, 3), PackedInt32Array(5, 6, 7, 8, 4), PackedInt32Array(9, 5, 4, 3, 10, 11), PackedInt32Array(11, 10, 12, 13), PackedInt32Array(13, 12, 14, 15, 16, 17, 18), PackedInt32Array(17, 16, 19)])
outlines = Array[PackedVector2Array]([PackedVector2Array(704, 432, 664, 424, 643, 386, 644, 363, 607, 363, 608, 384, 554, 373, 610, 316, 529, 305, 472, 360, 384, 360, 390, 248, 392, 160, 426, 159, 578, 152, 579, 179, 594, 179, 600, 176, 704, 176)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_76cg7"]
vertices = PackedVector2Array(702, 158, 626.18, 158, 628.203, 45.8906, 702, -22, 402, 33.8203, 402, -22, 418.492, 42.0625, 414.133, 142, 394, 142, 394, 98, 410, 98, 415.117, 67.9688, 410, 75.8594, 402, 67.8594, 402, 60.4219, 417.461, 55.4688)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 5, 3, 2, 6), PackedInt32Array(7, 8, 9, 10), PackedInt32Array(11, 7, 10, 12), PackedInt32Array(11, 12, 13, 14, 15), PackedInt32Array(2, 11, 15), PackedInt32Array(6, 2, 15)])
outlines = Array[PackedVector2Array]([PackedVector2Array(712, -32, 392, -32, 392, 40, 408, 48, 392, 53.1295, 392, 72, 400, 80, 400, 88, 384, 88, 384, 152, 424, 152, 425, 77, 618, 57, 616, 168, 664, 168, 712, 168)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_83i1o"]
vertices = PackedVector2Array(-22, -22, 61.4219, -22, 34.0313, 19.5313, 172.594, 78.0313, 168.5, 98.4609, 21, 42.5078, 170, 215.5, 170, 262, 161.852, 262, 161, 204.32, 173.203, 183.461, 21, 142.672, 64.9297, 193.93, 22.8516, 199.039, 14.9531, 278, -22, 278)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5, 2), PackedInt32Array(6, 7, 8, 9), PackedInt32Array(10, 6, 9), PackedInt32Array(11, 10, 9, 12), PackedInt32Array(11, 12, 13), PackedInt32Array(13, 14, 15, 0, 11), PackedInt32Array(5, 11, 0), PackedInt32Array(0, 2, 5)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, 80, -32, 49, 15, 184, 72, 176, 112, 31, 57, 31, 135, 184, 176, 180, 216, 180, 272, 152, 272, 151.131, 213.312, 65, 204, 32, 208, 24, 288, -32, 288)])

[node name="TapperCenter" type="Node2D"]
script = ExtResource("2_tappercenter_script")

[node name="TapperPanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 676.0
offset_bottom = 453.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t045l")

[node name="NeonLightsContainer" type="Node2D" parent="TapperPanelContainer"]

[node name="NeonSignRightSide" type="PointLight2D" parent="TapperPanelContainer/NeonLightsContainer"]
material = SubResource("ShaderMaterial_4x851")
position = Vector2(548, 98.5)
scale = Vector2(0.491551, 0.547831)
color = Color(0.898039, 0, 1, 0.607843)
shadow_color = Color(0.746644, 0.00131156, 0.568267, 1)
texture = ExtResource("2_lig7u")
texture_scale = 1.55
height = 146.0

[node name="NeonSignLeftSide" type="PointLight2D" parent="TapperPanelContainer/NeonLightsContainer"]
position = Vector2(100.5, 105)
scale = Vector2(1.05623, 1.14317)
color = Color(0.898039, 0, 1, 0.94902)
energy = 0.45
texture = ExtResource("4_2r7vr")
texture_scale = 1.1
height = 200.0

[node name="TapperBG" type="TextureRect" parent="TapperPanelContainer"]
material = SubResource("ShaderMaterial_n5din")
layout_mode = 2
texture = ExtResource("1_wehm1")
expand_mode = 3

[node name="BitcoinBGSign" type="TextureRect" parent="TapperPanelContainer/TapperBG"]
material = SubResource("ShaderMaterial_eunnu")
layout_mode = 0
offset_left = 184.0
offset_top = 152.0
offset_right = 1659.0
offset_bottom = 2973.0
rotation = 0.0349066
scale = Vector2(0.03, 0.03)
texture = ExtResource("7_nujcl")

[node name="SimulatedLightBGSign" type="Node" parent="TapperPanelContainer/TapperBG/BitcoinBGSign" node_paths=PackedStringArray("target_node")]
script = ExtResource("8_vgntt")
target_node = NodePath("..")
min_value = 0.25
max_value = 0.5

[node name="ShaderBG" type="Polygon2D" parent="TapperPanelContainer/TapperBG"]
material = SubResource("ShaderMaterial_76cg7")
position = Vector2(389.979, 1.11664)
polygon = PackedVector2Array(1.021, 28.8834, -1.979, 28.8834, -1.979, 45.8834, -3.979, 45.8834, -3.97934, 46.8834, -16.979, 46.8834, -16.979, 49.8834, -22.979, 49.8834, -22.979, 55.8834, -24.9793, 55.8834, -22.979, 59.8834, -19.979, 59.8834, -19.979, 65.8834, -16.979, 65.8834, -16.979, 68.8834, -9.979, 68.8834, -8.979, 70.8834, -6.979, 70.8834, -6.979, 68.8834, 1.021, 68.8834, 1.021, 74.8834, -12.979, 74.8834, -13.979, 87.8834, -11.2218, 87.5768, -10.979, 89.8834, -13.979, 89.8834, -13.9793, 108.883, -10.979, 108.883, -9.979, 110.883, -6.979, 110.883, -5.979, 112.883, -2.979, 112.883, -1.97934, 133.883, -6.97934, 134.883, -9.97934, 139.883, -7.979, 142.883, -5.979, 142.883, -4.979, 144.883, -1.979, 145.883, -2.97934, 158.883, 1.02066, 160.883, 1.02066, 171.883, -14.979, 182.883, -11.979, 186.883, -0.979004, 178.883, -0.97934, 208.883, -5.979, 208.883, -5.97934, 190.883, -10.9793, 190.883, -10.9793, 200.883, -21.9793, 200.883, -21.9793, 167.883, -29.9793, 167.883, -29.979, 146.883, -31.979, 146.883, -31.979, 134.883, -32.979, 134.883, -32.979, 146.883, -39.979, 146.883, -39.979, 136.883, -40.979, 136.883, -40.979, 147.883, -41.979, 147.883, -41.9793, 168.883, -43.979, 168.883, -43.979, 171.883, -46.979, 171.883, -46.9793, 173.883, -52.9793, 173.883, -52.979, 150.883, -54.979, 150.883, -55.979, 152.883, -56.979, 152.883, -56.979, 142.883, -57.979, 142.883, -57.979, 150.883, -63.9793, 150.883, -63.9793, 129.883, -71.979, 129.883, -71.979, 117.883, -72.979, 117.883, -72.979, 129.883, -78.9793, 129.883, -78.9793, 148.883, -83.9793, 148.883, -83.9793, 100.883, -78.979, 100.883, -78.979, 72.8834, -83.9793, 72.8834, -83.979, 24.8834, -98.979, 16.8834, -98.9793, 28.8834, -103.979, 28.8834, -102.979, 0.88336, -128.979, 0.88336, -128.979, 13.8834, -128.979, 92.8834, -131.979, 95.8834, -131.979, 13.8834, -134.979, 13.8834, -135.979, 5.88336, -143.979, 4.88336, -144.979, 1.88336, -160.979, -1.11664, 1.021, -1.11664)

[node name="RatSpawner" type="Control" parent="TapperPanelContainer"]
z_index = 1
material = SubResource("ShaderMaterial_2r7vr")
clip_contents = true
layout_mode = 2
mouse_filter = 1
script = ExtResource("7_2r7vr")
rat_scene = ExtResource("8_4x851")
min_spawn_interval = 8.0
max_spawn_interval = 25.0
min_rat_speed = 70.0
max_rat_speed = 150.0
y_position_offset = -53.0

[node name="Timer" type="Timer" parent="TapperPanelContainer/RatSpawner"]

[node name="RoachNavRegionBottomRight" type="NavigationRegion2D" parent="TapperPanelContainer"]
navigation_polygon = SubResource("NavigationPolygon_eunnu")

[node name="RoachNavRegionTopRight" type="NavigationRegion2D" parent="TapperPanelContainer"]
navigation_polygon = SubResource("NavigationPolygon_76cg7")

[node name="RoachNavRegionLeft" type="NavigationRegion2D" parent="TapperPanelContainer"]
navigation_polygon = SubResource("NavigationPolygon_83i1o")

[node name="RoachDespawnOcclusionZone" type="Area2D" parent="TapperPanelContainer"]

[node name="SafeDespawnZone" type="CollisionPolygon2D" parent="TapperPanelContainer/RoachDespawnOcclusionZone"]
position = Vector2(465.357, 346.654)
polygon = PackedVector2Array(-69.357, 2.34601, -65.357, -95.654, -22.357, 2.34601)

[node name="RoachSpawner" type="Control" parent="TapperPanelContainer" node_paths=PackedStringArray("occlusion_despawn_zone")]
clip_contents = true
layout_mode = 2
script = ExtResource("14_pifg3")
roach_scene = ExtResource("13_fy5hl")
occlusion_despawn_zone = NodePath("../RoachDespawnOcclusionZone")
max_spawn_interval = 25.0
max_roaches = 8
edge_spawn_margin = 40.0

[node name="Timer" type="Timer" parent="TapperPanelContainer/RoachSpawner"]
wait_time = 20.0
one_shot = true
autostart = true

[node name="TapperCenterNode2D" type="Node2D" parent="TapperPanelContainer"]

[node name="TapperArea" parent="TapperPanelContainer/TapperCenterNode2D" instance=ExtResource("1_y563b")]
position = Vector2(312, 264)
scale = Vector2(0.615, 0.534)
